Fix most compile issues, cleanup pass